developer-docs/resources/example-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    name: induction-hello-world
