developer-docs/resources/example-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
spec:
  rules:
  - host: induction-hello-world.notprod.homeoffice.gov.uk
    http:
      paths:
      - backend:
          serviceName: hello-world-service
          servicePort: http
        path: /
